# prism

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  package.json
compiler/: Cargo.toml  history.txt
compiler/compiler/examples/comparison/: medical_diagnosis.prism
compiler/examples/: basic.prism  context.prism  control_flow.prism  demo.prism  llm.prism  medical_diagnosis.prism  medical_diagnosis.rs  module_example.prism  run_medical_demo.rs  stdlib.prism  test.prism
compiler/examples/comparison/: medical_diagnosis.prism  prism_diagnosis.prism  run_comparison.rs  traditional_diagnosis.rs
compiler/lib/: test_module.prism  utils.prism
compiler/src/: ast.rs  confidence.rs  context.rs  environment.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  llm.rs  macro_expansion.rs  main.rs  module.rs  parser.rs  repl.rs  stdlib.rs  token.rs  type_inference.rs  types.rs  value.rs  wasm.rs
compiler/src/llm/: gemini.rs  mod.rs  openai.rs
compiler/src/stdlib/: medical.rs  mod.rs
compiler/src/stdlib/core/: mod.rs
compiler/src/stdlib/llm/: mod.rs
compiler/src/stdlib/medical/: mod.rs
compiler/src/stdlib/utils/: mod.rs
compiler/tests/: integration_tests.rs  interpreter_tests.rs  llm_tests.rs  module_tests.rs  parser_tests.rs  run_tests.rs
compiler/tests/integration/: all_features.prism
docs/: SPEC.md
docs/api/: README.md
docs/guide/: README.md
docs/learn/guides/: debugging.md  performance.md  security.md
docs/modules/: README.md
docs/stdlib/: README.md
examples/: arrays.prism  async.prism  error_handling.prism  functions.prism  generics.prism  language_features.prism  llm_example.rs  loops.prism  macros.prism  medical_diagnosis.prism  medical_diagnosis.rs  operators.prism  pattern_matching.prism  showcase.prism  structs.prism  test.prism  traits.prism  type_inference.prism
examples/comparison/: medical_diagnosis.prism  mod.rs  run_comparison.rs  test_prism_features.rs
examples/modules/: main.prism  utils.prism  validation.prism
prism-ts/: jest.config.js  package.json  tsconfig.json
prism-ts/docs/: api-reference.md  examples.md  getting-started.md
prism-ts/src/: index.ts  prism.d.ts
prism-ts/src/__tests__/: index.test.ts
tests/: integration_tests.rs  interpreter_tests.rs  module_tests.rs  parser_tests.rs  run_tests.rs
