[workspace]
resolver = "2"
members = [
    "compiler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Prism Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.40"
logos = "0.13.0"

# Parsing
lalrpop = "0.20"
lalrpop-util = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client and async runtime
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.28", features = ["full"] }

# Environment and configuration
dotenv = "0.15"

# Math and tensor operations
ndarray = "0.15"

# Async runtime and utilities
futures = "0.3"
  