[package]
name = "prism"
version = "0.9.0"
edition = "2021"
description = "A modern programming language designed for AI-first development"
authors = ["Oneiro Team"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
async-trait = "0.1"
thiserror = "1.0"
rustyline = "12.0"
colored = "2.0"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["native"]
native = []
wasm = ["wasm-bindgen"]

[lib]
name = "prism"
path = "src/lib.rs"

[[bin]]
name = "prism"
path = "src/main.rs"
 